refactor(errors): implement comprehensive error reporting with file:line context - M8
Add file and line number tracking to all error messages, making errors actionable
and easy to debug. Completes M8 Error Reporting refactoring task.

**Implementation:**

**Phase 1-2: Line Tracking Infrastructure**
- Added current_file_ and current_line_ tracking to MerlinSyntaxParser
- Initialize to "<stdin>":0, increment line counter in Parse() loop
- Track line numbers throughout parsing lifecycle

**Phase 3: Error Formatting Helper**
- Implemented FormatError() helper method
- Format: "filename:line: error: message"
- Consistent error format across all error sites

**Phase 4: Update All Error Sites**
- Updated all 21 throw sites to use FormatError()
- Errors now include: file name, line number, descriptive message
- Covers: invalid numbers, undefined symbols, directive errors, conditional errors

**Phase 5: Comprehensive Tests**
- Added 11 error reporting tests (test_error_reporting.cpp)
- Verify all errors include file:line format
- Test error messages for: hex/binary parsing, symbols, directives, conditionals
- Verify line numbers are accurate (multi-line test)

**Error Message Examples:**

Before:
```
Invalid hex number: '$' (no digits after $)
```

After:
```
<stdin>:1: error: Invalid hex number: '$' (no digits after $)
```

**Results:**
- All 489 tests passing (478 original + 11 new error reporting tests)
- Zero regressions
- All error messages now actionable with file:line context
- Consistent error format across entire parser

**Files Modified:**
- include/xasm++/syntax/merlin_syntax.h (added tracking fields + FormatError)
- src/syntax/merlin/merlin_syntax.cpp (line tracking + all error sites updated)
- tests/unit/test_error_reporting.cpp (11 new tests)
- tests/unit/CMakeLists.txt (register new test)

Task: 2026-01-27_error-reporting
Beads: xasm++-b1j (M8)
Agent: task-engineer-20260127-074506 (completed before getting stuck)
Parent: xasm++-hxm (Code Quality Refactoring)

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -165,3 +165,17 @@ target_link_libraries(test_exception_safety
 )
 
 gtest_discover_tests(test_exception_safety)
+
+# Error reporting tests
+add_executable(test_error_reporting
+  test_error_reporting.cpp
+)
+
+target_link_libraries(test_error_reporting
+  xasm_syntax
+  xasm_core
+  gtest_main
+  gtest
+)
+
+gtest_discover_tests(test_error_reporting)
