refactor: reorganize build artifacts into build/ directory
- All executables now go to build/bin/ (xasm++)
- All test executables go to build/Testing/ (test_*)
- All libraries go to build/lib/ (libxasm_*.a)
- Testing/ output (CTest logs) also in build/Testing/
- Updated .gitignore to ignore test binaries anywhere
- Added backwards-compat symlink: build/src/xasm++ -> build/bin/xasm++

Benefits:
- Clean source tree (no compiled binaries in source folders)
- All build artifacts contained in build/ directory
- Consistent with CMake best practices
- Easier to clean (rm -rf build/)

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,9 @@ Testing/
 *.dylib
 *.dll
 *.exe
-/xasm++
+xasm++
+test_*
+placeholder_test
 
 # CMake cache
 CMakeCache.txt
@@ -78,7 +80,6 @@ test.asm
 test.bin
 a.out
 AGENTS.md
-/test_*
 tests/scratch/
 
 # Repository cleanup artifacts
